<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.cegeptr.projetagectr.ui.search.SearchFragment"
        android:label="@string/menu_research"
        tools:layout="@layout/fragment_research" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.cegeptr.projetagectr.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.cegeptr.projetagectr.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.cegeptr.projetagectr.ui.reservation.ReservationFragment"
        android:label="@string/menu_reservation"
        tools:layout="@layout/fragment_reservation" />

    <fragment
    android:id="@+id/nav_my_book"
    android:name="com.cegeptr.projetagectr.ui.my_book.My_bookFragment"
    android:label="@string/menu_my_book"
    tools:layout="@layout/fragment_my_book" />

    <fragment
        android:id="@+id/nav_group_result"
        android:name="com.cegeptr.projetagectr.ui.groupResult.GroupResultFragment"
        android:label="@string/menu_group_result"
        tools:layout="@layout/fragment_group_result" />

    <fragment
        android:id="@+id/nav_my_history"
        android:name="com.cegeptr.projetagectr.ui.history.HistoryFragment"
        android:label="@string/menu_my_history"
        tools:layout="@layout/fragment_history" />

</navigation>