<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background">

    <TextView
        android:id="@+id/dialog_concess_action_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title"
        android:padding="8dp"
        android:text="@string/alert_title_action"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialog_concess_action_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_edit_view"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_renew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_concess_action_title" />

    <Button
        android:id="@+id/dialog_concess_action_renew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_renew"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_give"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/dialog_concess_action_give"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_give"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/dialog_concess_action_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_remove"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/dialog_concess_action_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_delete"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_unpay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/dialog_concess_action_unpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_unpayed"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toTopOf="@+id/dialog_concess_action_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/dialog_concess_action_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_round"
        android:text="@string/alert_button_cancel"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>