<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_create_account_title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_create_account_tv_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_last_name_required"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name_required"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_NAME"
                android:inputType="textShortMessage|textPersonName"
                android:maxLength="50"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_courriel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_mail_required"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_courriel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password_required"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"
                android:inputType="textPassword"
                android:maxLength="50"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_mdp_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_password_confirm_required"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_mdp_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_PASSWORD"
                android:inputType="textPassword"
                android:maxLength="50"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_phone"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_PHONE_NUMBER"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="14"
                android:textColor="@color/colorTextDark" />

            <TextView
                android:id="@+id/dialog_create_account_tv_maricule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_matricule"
                android:textColor="@color/colorTextDark" />

            <EditText
                android:id="@+id/dialog_create_account_et_matricule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="7"
                android:textColor="@color/colorTextDark" />

            <LinearLayout
                android:id="@+id/dialog_create_account_layout_condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dialog_create_account_tv_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/label_terms_and_conditions"
                    android:textColor="@color/colorTextDark"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/dialog_create_account_cb_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:clickable="false" />
            </LinearLayout>

            <Button
                android:id="@+id/dialog_create_account_bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_round"
                android:text="@string/alert_button_save"
                android:textColor="@color/colorTextLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/dialog_create_account_bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/button_round"
                android:text="@string/alert_button_cancel"
                android:textColor="@color/colorTextLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/dialog_create_account_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title"
        android:padding="8dp"
        android:text="@string/alert_title_create_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/dialog_create_account_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>